UDNP-2509 - fix z-index for UDNP-2453

--- a/src/styles/components/_side-panel.scss
+++ b/src/styles/components/_side-panel.scss
@@ -73,6 +73,8 @@ $lt-side-panel-bg-color: $white;
     position: fixed;
     right: 0;
     bottom: 0;
+    // TODO: UDNP-2181 - Abstract z-index values to variables
+    z-index: 11;
     width: 100%;
     max-width: $side-panel-width;
 
@@ -115,6 +117,7 @@ $lt-side-panel-bg-color: $white;
     }
 
     .modal-footer {
+      // TODO: UDNP-2181 - Abstract z-index values to variables
       z-index: 11;
       background: $dt-side-panel-bg-color;
 
